--- a/styles.css
+++ b/styles.css
@@ -69,11 +69,12 @@ section {
 button {
   font: inherit;
   display:inline-block;
-  padding:0.35em 1.2em;
-  border:0.1em solid #FFFFFF;
+  padding:0.35rem 1.2rem;
+  border:0.1rem solid #FFFFFF;
   margin: 1%;
   border-radius: 12px;
   box-sizing: border-box;
+  text-decoration:none;
   color: white;
   background-color: #88005b;
   text-align: center;
