--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ section {
   width: 100%;
   height: 40px;
   border: 1px solid #575757;
-  margin: 1rem 0;
+  margin: 0 0 1rem 0;
   background: #fde5e5;
 }
 
@@ -52,12 +52,21 @@ section {
   margin: 0.25rem;
 }
 
+.attackStyleContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .attackStyle {
   width: 40px;
   height: 40px;
   border: 2px solid #575757;
   border-radius: 5px;
-  align-items: center;
+  display: inline-block;
+  margin: 0px;
+  padding: 0px;
 }
 
 #controls {
