--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ section {
   width: 100%;
   height: 40px;
   border: 1px solid #575757;
-  margin: 0 0 1rem 0;
+  margin: 1rem 0 1rem 0;
   background: #fde5e5;
 }
 
@@ -50,6 +50,14 @@ section {
 #monster h2,
 #player h2 {
   margin: 0.25rem;
+}
+
+.goblin {
+  width: 55px;
+  height: 55px;
+  margin-top: 10px;
+  border: 2px solid #575757;
+  border-radius: 5px;
 }
 
 .attackStyleContainer {
