--- a/styles.css
+++ b/styles.css
@@ -26,17 +26,19 @@ section {
 }
 
 .healthbar {
+  background: #fde5e5;
+  border: 1px solid #575757;
+  border-radius: 5px;
   width: 100%;
   height: 40px;
-  border: 1px solid #575757;
-  margin: 1rem 0 1rem 0;
-  background: #fde5e5;
+  overflow: hidden;
 }
 
-.healthbar__value {
+.healthbar_fill {
   background-color: #00a876;
   width: 100%;
   height: 100%;
+  transition: all 0.5s
 }
 
 .container {
@@ -52,17 +54,24 @@ section {
   margin: 0.25rem;
 }
 
-.goblin {
+.monster {
   width: 55px;
   height: 55px;
   margin-top: 10px;
-  border: 2px solid #575757;
-  border-radius: 5px;
+  border: 2px dotted #575757;
+  border-radius: 3px;
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% { transform: scale(0.9); }
+  70% { transform: scale(1); }
+  100% { transform: scale(0.9); }
 }
 
 .flexbox-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -79,6 +88,7 @@ section {
 }
 
 .flexbox-item-3 {
+  flex-grow: 1;
 }
 
 .attackStyle {
@@ -158,4 +168,85 @@ button:disabled {
 
 .log--special {
   color: blue;
+}
+
+.stepper-wrapper {
+  font-family: Arial;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.stepper-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
+}
+
+.stepper-item::before {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+  top: 20px;
+  left: -50%;
+  z-index: 2;
+}
+
+.stepper-item::after {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+  top: 20px;
+  left: 50%;
+  z-index: 2;
+}
+
+.stepper-item .step-icon {
+  position: relative;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: double;
+  background: #ccc;
+  margin-bottom: 6px;
+}
+
+.stepper-item.active {
+  font-weight: bold;
+  transition: all 0.5s;
+}
+
+.stepper-item.completed .step-icon {
+  background-color: #4bb543;
+  transition: all 0.5s;
+}
+
+.stepper-item.completed::after {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #4bb543;
+  width: 100%;
+  top: 20px;
+  left: 50%;
+  z-index: 3;
+  transition: all 0.5s;
+}
+
+.stepper-item:first-child::before {
+  content: none;
+}
+.stepper-item:last-child::after {
+  content: none;
 }
